--- a/package.json
+++ b/package.json
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-navigation/bottom-tabs": "^6.5.14",
+    "@react-navigation/native": "^6.1.12",
+    "@react-navigation/stack": "^6.3.23",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "formik": "^2.4.5",
+    "i18next": "^23.10.0",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-i18next": "^14.0.5",
+    "react-native": "0.73.5",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "^3.7.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.0.0",
+    "react-native-toast-notifications": "^3.4.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,9 +41,12 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
