--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native": "0.73.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
